login double toast bug fix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "noflop-movie",
+  "name": "beyond-the-screen",
+  "homepage": "https://myusername.github.io/my-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
